save some space

--- a/latex/template.tex
+++ b/latex/template.tex
@@ -81,13 +81,10 @@ $$
   [J_{ij}^1] & [J_{ij}^2]\\
   [J_{ij}^3] & [J_{ij}^4]
   \end{pmatrix}\\
-& J_{ij}^1(t) &&= \frac{\partial \eta_i(t+1)}{\partial \eta_j(t)}\\
-& J_{ij}^2(t) &&= \frac{\partial \eta_i(t+1)}{\partial \xi_j(t)}\\
-& J_{ij}^3(t) &&= \frac{\partial \xi_i(t+1)}{\partial \eta_j(t)}\\
-& J_{ij}^4(t) &&= \frac{\partial \xi_i(t+1)}{\partial \xi_j(t)}
 \end{aligned}
 $$
 
+$J_{ij}^1(t) = \frac{\partial \eta_i(t+1)}{\partial \eta_j(t)}, J_{ij}^2(t) = \frac{\partial \eta_i(t+1)}{\partial \xi_j(t)}, J_{ij}^3(t) = \frac{\partial \xi_i(t+1)}{\partial \eta_j(t)}, J_{ij}^4(t) = \frac{\partial \xi_i(t+1)}{\partial \xi_j(t)}$
 
 The lyapunov exponents of the system are given by the natural logarithm of the eigenvalues of the matrix $\Lambda_A := [J(A)J(A)^T]^{\frac{1}{2}}$, which are discovered to be ${\frac{1}{2}}ln(N) + ln(k_f)$ and ${\frac{1}{2}}ln(N) + ln(k_r)$, and the rest of the lyapunov exponents being $-\infty$. Therefore, if either of the finite lyapunov are positive, the system exhibits chaotic behaviour. The Routh–Hurwitz cretiria is used on the continuous analogue of the system in order to derive the sufficient condition for M-AdNN to be unstable. Based on the result, is conjectured that $k_f, k_r > 0$ are the sufficient conditions for M-AdNN to be locally unstable. Although the system is capable of switching from chaos to periodicity, it has not yet resolved how this transpires within the M-AdNN. Although, it appears that $k_f$ and $k_r$ determine the behaviour of the system, it is also discovered that $\alpha$ also plays an important role as a bifurcation parameter [8]. As a system capable of pattern recognition, it can determined weather the M-AdNN has converged to a periodic orbit by studying the Fourier spectrum of the network's output. In case a pattern is recognised, a spike at the frequency of the periodic orbit would be observed. The periodicity was measured in [1] by determining the distance of the network's output to each of the stored patterns, with the periodicity being the number of steps between each step where the output was observed to be close to the same stored pattern. After a few transient steps, it was observed that the inputs resonated with only one of the stored pattern. Although possible that the output can resonate with another stored pattern, the authors argued that they did not observe such behaviour in the 1000 iterations they ran. As such, if it were the case that there was another attractor, it's periodicity will be orders of magnitude higher than relatively lower periodicity observed for the trained pattern initially. The different periodicities of multiple patterns could also distinguish in classification tasks, with the attractor corresponding to a lower periodicity being "useful" while the attractor with higher periodicity being "not useful". An immediate application of the chaotic pattern recognition could be to OCR (Optical Character Recognition) mechanism. Since, the experiments conducted to recognise bitmaps of numerals proved to be 100\% accurate from noisy input patterns, the OCR could succeed even with a relatively noisy background.
 
