--- a/pr.ipynb
+++ b/pr.ipynb
@@ -13,8 +13,7 @@
     "\n",
     "from IPython.display import set_matplotlib_formats\n",
     "\n",
-    "%matplotlib inline\n",
-    "set_matplotlib_formats('svg')"
+    "%matplotlib inline"
    ]
   },
   {
@@ -28,7 +27,7 @@
     "\n",
     "NOISE = 10\n",
     "T = 100\n",
-    "THRESHOLD = 21\n",
+    "THRESHOLD = 10\n",
     "\n",
     "E = 0.00015\n",
     "KF = 0.2\n",
@@ -246,14 +245,15 @@
    "outputs": [],
    "source": [
     "def draw():\n",
-    "    def redraw(u, cmap=None):\n",
+    "    def redraw(u, cmap=None, refresh=True):\n",
     "        if cmap is None:\n",
     "            plot(u)\n",
     "        else:\n",
     "            plot(u, cmap=cmap)\n",
-    "            \n",
-    "        display.clear_output(wait=True)\n",
-    "        plt.pause(0.5)\n",
+    "    \n",
+    "        if refresh:\n",
+    "            display.clear_output(wait=True)\n",
+    "            plt.pause(0.5)\n",
     "        \n",
     "    return redraw"
    ]
@@ -298,7 +298,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def madnn(y, should_plot):\n",
+    "def madnn(y, should_plot, refresh):\n",
     "    redraw = draw()\n",
     "    \n",
     "    a = np.copy(y)\n",
@@ -309,16 +309,20 @@
     "    \n",
     "    count = []\n",
     "    period = []\n",
+    "    distances = []\n",
     "    \n",
     "    for i in range(len(patterns)):\n",
     "        count.append([])\n",
     "        period.append([])\n",
+    "        distances.append([])\n",
     "\n",
     "    for t in range(T):\n",
+    "        uu = np.copy(u)\n",
+    "\n",
     "        for i in range(N2):\n",
     "            wu = 0\n",
     "            for j in range(N2):\n",
-    "                wu += (W[i, j] * u[j])\n",
+    "                wu += (W[i, j] * uu[j])\n",
     "            \n",
     "            n[i] = KF * n[-1] + wu\n",
     "            e[i] = KR * e[-1] - ALPHA * u[i] + a[i]\n",
@@ -329,19 +333,20 @@
     "            d = distance(p, u)\n",
     "            if d <= THRESHOLD:\n",
     "                count[i].append(t)\n",
+    "                distances[i].append(d)\n",
     "                c = True\n",
     "\n",
     "        if should_plot:\n",
     "            if c:\n",
-    "                redraw(u, cmap='GnBu')\n",
+    "                redraw(u, cmap='Blues', refresh=refresh)\n",
     "            else:\n",
-    "                redraw(u)\n",
+    "                redraw(u, cmap='Greys', refresh=refresh)\n",
     "    \n",
     "    for i, p in enumerate(count):\n",
     "        for j in range(1, len(p)):\n",
     "            period[i].append(count[i][j] - count[i][j-1])\n",
     "            \n",
-    "    return count, period"
+    "    return count, period, distances"
    ]
   },
   {
@@ -359,7 +364,7 @@
     }
    ],
    "source": [
-    "count, period = madnn(noise_patterns[6], should_plot=False)"
+    "count, period, distances = madnn(noise_patterns[0], should_plot=False, refresh=True)"
    ]
   },
   {
@@ -370,101 +375,7 @@
     {
      "data": {
       "text/plain": [
-       "[[],\n",
-       " [],\n",
-       " [],\n",
-       " [],\n",
-       " [],\n",
-       " [],\n",
-       " [1,\n",
-       "  1,\n",
-       "  1,\n",
-       "  1,\n",
-       "  1,\n",
-       "  1,\n",
-       "  1,\n",
-       "  1,\n",
-       "  1,\n",
-       "  1,\n",
-       "  1,\n",
-       "  1,\n",
-       "  1,\n",
-       "  1,\n",
-       "  1,\n",
-       "  4,\n",
-       "  1,\n",
-       "  1,\n",
-       "  1,\n",
-       "  1,\n",
-       "  1,\n",
-       "  1,\n",
-       "  1,\n",
-       "  1,\n",
-       "  1,\n",
-       "  1,\n",
-       "  1,\n",
-       "  1,\n",
-       "  1,\n",
-       "  1,\n",
-       "  1,\n",
-       "  1,\n",
-       "  1,\n",
-       "  1,\n",
-       "  1,\n",
-       "  1,\n",
-       "  1,\n",
-       "  4,\n",
-       "  1,\n",
-       "  1,\n",
-       "  1,\n",
-       "  1,\n",
-       "  1,\n",
-       "  1,\n",
-       "  1,\n",
-       "  1,\n",
-       "  1,\n",
-       "  1,\n",
-       "  1,\n",
-       "  1,\n",
-       "  1,\n",
-       "  1,\n",
-       "  1,\n",
-       "  1,\n",
-       "  1,\n",
-       "  1,\n",
-       "  1,\n",
-       "  1,\n",
-       "  1,\n",
-       "  4,\n",
-       "  1,\n",
-       "  1,\n",
-       "  1,\n",
-       "  1,\n",
-       "  1,\n",
-       "  1,\n",
-       "  1,\n",
-       "  1,\n",
-       "  1,\n",
-       "  1,\n",
-       "  1,\n",
-       "  1,\n",
-       "  1,\n",
-       "  1,\n",
-       "  1,\n",
-       "  1,\n",
-       "  1,\n",
-       "  1,\n",
-       "  1,\n",
-       "  1,\n",
-       "  1,\n",
-       "  4,\n",
-       "  1,\n",
-       "  1,\n",
-       "  1,\n",
-       "  1],\n",
-       " [],\n",
-       " [],\n",
-       " []]"
+       "[[7, 8, 7, 7, 8, 7, 7, 8, 7, 7, 8, 7], [], [], [], [], [], [], [], [], []]"
       ]
      },
      "execution_count": 12,
@@ -500,7 +411,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.6"
   }
  },
  "nbformat": 4,
