--- a/pr.ipynb
+++ b/pr.ipynb
@@ -11,7 +11,11 @@
     "import IPython.display as display\n",
     "import math\n",
     "\n",
+    "from matplotlib import colors\n",
     "from IPython.display import set_matplotlib_formats\n",
+    "\n",
+    "\n",
+    "np.set_printoptions(precision=8)\n",
     "\n",
     "%matplotlib inline"
    ]
@@ -192,9 +196,9 @@
     "    W = np.zeros((N2, N2))\n",
     "    for i in range(N2):\n",
     "        for j in range(N2):\n",
-    "#             if i == j:\n",
-    "#                 W[i, j] = 0\n",
-    "#                 continue\n",
+    "            if i == j:\n",
+    "                W[i, j] = 0\n",
+    "                continue\n",
     "            for p in patterns:\n",
     "                W[i, j] += (p[i] * p[j])\n",
     "            W[i, j] /= len(patterns)\n",
@@ -209,11 +213,12 @@
    "source": [
     "def plot(x, n=N, cmap='binary'):\n",
     "    fig, ax = plt.subplots(figsize=(5, 5))\n",
-    "    ax.imshow(x.reshape((n, n)), cmap=cmap)\n",
+    "    im = ax.imshow(x.reshape((n, n)), cmap=cmap, vmin=0, vmax=1)\n",
     "    \n",
     "    ax.minorticks_on()\n",
     "    ax.grid(which='major', linestyle='-', linewidth='0.5', color='black')\n",
     "    ax.grid(which='minor', linestyle='-', linewidth='0.5', color='black')\n",
+    "    fig.colorbar(im, ax=ax)\n",
     "    \n",
     "    return fig, ax"
    ]
@@ -299,6 +304,8 @@
    "outputs": [],
    "source": [
     "def madnn(y, should_plot, refresh):\n",
+    "    CMAP = colors.LinearSegmentedColormap.from_list(\"\", [\"white\",\"purple\"])\n",
+    "\n",
     "    redraw = draw()\n",
     "    \n",
     "    a = np.copy(y)\n",
@@ -338,7 +345,8 @@
     "\n",
     "        if should_plot:\n",
     "            if c:\n",
-    "                redraw(u, cmap='Blues', refresh=refresh)\n",
+    "                redraw(u, cmap=CMAP, refresh=refresh)\n",
+    "\n",
     "            else:\n",
     "                redraw(u, cmap='Greys', refresh=refresh)\n",
     "    \n",
@@ -364,7 +372,7 @@
     }
    ],
    "source": [
-    "count, period, distances = madnn(noise_patterns[0], should_plot=False, refresh=True)"
+    "count, period, distances = madnn(noise_patterns[1], should_plot=False, refresh=True)"
    ]
   },
   {
@@ -375,7 +383,7 @@
     {
      "data": {
       "text/plain": [
-       "[[7, 8, 7, 7, 8, 7, 7, 8, 7, 7, 8, 7], [], [], [], [], [], [], [], [], []]"
+       "[[], [8, 7, 7, 8, 7, 7, 8, 7, 7, 8, 7], [], [], [], [], [], [], [], []]"
       ]
      },
      "execution_count": 12,
